--- a/Hippo/UIView/CustomViews/ChatInfoHeader/ChatInfoHeader.xib
+++ b/Hippo/UIView/CustomViews/ChatInfoHeader/ChatInfoHeader.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,19 +17,19 @@
                     <rect key="frame" x="0.0" y="0.0" width="572" height="94"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d2g-Q6-WAN" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                            <rect key="frame" x="20" y="37" width="20" height="20"/>
+                            <rect key="frame" x="16" y="37" width="20" height="20"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="20" id="BKT-tU-0kl"/>
                                 <constraint firstAttribute="width" secondItem="d2g-Q6-WAN" secondAttribute="height" multiplier="1:1" id="gzG-uN-nkA"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KZX-rj-3TS" customClass="So_CustomLabel" customModule="Hippo" customModuleProvider="target">
-                            <rect key="frame" x="48" y="38.5" width="514" height="17"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <nil key="textColor"/>
+                            <rect key="frame" x="44" y="38" width="520" height="18"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hzG-3H-nTu" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hzG-3H-nTu" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="93" width="572" height="1"/>
                             <color key="backgroundColor" red="0.91764705879999997" green="0.91764705879999997" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
@@ -43,15 +41,11 @@
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="hzG-3H-nTu" secondAttribute="bottom" id="F7U-95-6D3"/>
                         <constraint firstAttribute="trailing" secondItem="hzG-3H-nTu" secondAttribute="trailing" id="LZO-Oz-VJi"/>
-                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="d2g-Q6-WAN" secondAttribute="bottom" constant="5" id="Mpi-95-lnc"/>
                         <constraint firstItem="KZX-rj-3TS" firstAttribute="centerY" secondItem="PLn-5i-j1T" secondAttribute="centerY" id="OGc-PP-xeW"/>
                         <constraint firstItem="hzG-3H-nTu" firstAttribute="leading" secondItem="PLn-5i-j1T" secondAttribute="leading" id="V6A-l4-vZV"/>
-                        <constraint firstItem="KZX-rj-3TS" firstAttribute="top" relation="greaterThanOrEqual" secondItem="PLn-5i-j1T" secondAttribute="top" constant="5" id="Wio-cf-EVZ"/>
-                        <constraint firstAttribute="trailing" secondItem="KZX-rj-3TS" secondAttribute="trailing" constant="10" id="mV9-pc-l5z"/>
+                        <constraint firstAttribute="trailing" secondItem="KZX-rj-3TS" secondAttribute="trailing" constant="8" id="mV9-pc-l5z"/>
                         <constraint firstItem="KZX-rj-3TS" firstAttribute="leading" secondItem="d2g-Q6-WAN" secondAttribute="trailing" constant="8" id="w6h-ja-9eV"/>
-                        <constraint firstItem="d2g-Q6-WAN" firstAttribute="top" relation="greaterThanOrEqual" secondItem="PLn-5i-j1T" secondAttribute="top" constant="5" id="wK3-pu-9mw"/>
-                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="KZX-rj-3TS" secondAttribute="bottom" constant="5" id="yLW-9r-1Fb"/>
-                        <constraint firstItem="d2g-Q6-WAN" firstAttribute="leading" secondItem="PLn-5i-j1T" secondAttribute="leading" constant="20" id="z8C-40-3j5"/>
+                        <constraint firstItem="d2g-Q6-WAN" firstAttribute="leading" secondItem="PLn-5i-j1T" secondAttribute="leading" constant="16" id="z8C-40-3j5"/>
                         <constraint firstItem="d2g-Q6-WAN" firstAttribute="centerY" secondItem="PLn-5i-j1T" secondAttribute="centerY" id="zWa-O1-Act"/>
                     </constraints>
                 </view>
@@ -65,6 +59,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="constraintTextLabelLeading" destination="w6h-ja-9eV" id="aRl-e7-eVy"/>
                 <outlet property="horizontalLineView" destination="hzG-3H-nTu" id="SLx-u8-A41"/>
                 <outlet property="iconImageView" destination="d2g-Q6-WAN" id="HNJ-yn-q7g"/>
                 <outlet property="mainContentView" destination="PLn-5i-j1T" id="iMX-Ok-FIc"/>
