--- a/Hippo/UIView/TableViewCell/ChatInfoTagView/ChatInfoTagViewCell.xib
+++ b/Hippo/UIView/TableViewCell/ChatInfoTagView/ChatInfoTagViewCell.xib
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ChatInfoTagViewCell" customModule="SDKDemo1" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ChatInfoTagViewCell" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="441" height="249"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="441" height="248.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="441" height="249"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKe-y6-44E">
+                        <rect key="frame" x="16" y="12" width="32.5" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="TopLeft" semanticContentAttribute="forceLeftToRight" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="8nB-7w-ch0">
                         <rect key="frame" x="48" y="10" width="383" height="128"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -31,15 +35,8 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tag" translatesAutoresizingMaskIntoConstraints="NO" id="EYF-Ed-uo2">
-                        <rect key="frame" x="10" y="10" width="30" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="XKF-Wa-chP"/>
-                            <constraint firstAttribute="width" constant="30" id="s3D-FR-Lar"/>
-                        </constraints>
-                    </imageView>
-                    <view clipsSubviews="YES" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="pWw-OO-1mb" customClass="TagListView" customModule="SDKDemo1" customModuleProvider="target">
-                        <rect key="frame" x="50" y="10" width="381" height="228.5"/>
+                    <view clipsSubviews="YES" contentMode="scaleAspectFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pWw-OO-1mb" customClass="TagListView" customModule="Hippo" customModuleProvider="target">
+                        <rect key="frame" x="16" y="76" width="409" height="229"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="removeButtonIconSize">
@@ -54,14 +51,13 @@
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="8nB-7w-ch0" secondAttribute="bottom" constant="10" id="4WL-o9-odU"/>
                     <constraint firstItem="8nB-7w-ch0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="71N-x9-AqS"/>
-                    <constraint firstItem="pWw-OO-1mb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="9UQ-DV-bzu"/>
-                    <constraint firstItem="EYF-Ed-uo2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="UDB-Uy-yij"/>
-                    <constraint firstAttribute="trailing" secondItem="pWw-OO-1mb" secondAttribute="trailing" constant="10" id="WKa-R7-eu6"/>
-                    <constraint firstItem="pWw-OO-1mb" firstAttribute="leading" secondItem="EYF-Ed-uo2" secondAttribute="trailing" constant="10" id="ZLy-UQ-2UR"/>
-                    <constraint firstAttribute="bottom" secondItem="pWw-OO-1mb" secondAttribute="bottom" constant="10" id="hHf-MK-3un"/>
+                    <constraint firstItem="bKe-y6-44E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Zir-bn-6Dw"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="pWw-OO-1mb" secondAttribute="bottom" constant="40" id="hHf-MK-3un"/>
+                    <constraint firstItem="pWw-OO-1mb" firstAttribute="leading" secondItem="bKe-y6-44E" secondAttribute="leading" id="hhe-vG-Pxm"/>
+                    <constraint firstItem="pWw-OO-1mb" firstAttribute="top" secondItem="bKe-y6-44E" secondAttribute="bottom" constant="16" id="iBB-b3-Mfn"/>
                     <constraint firstAttribute="trailing" secondItem="8nB-7w-ch0" secondAttribute="trailing" constant="10" id="myf-9g-N3o"/>
-                    <constraint firstItem="EYF-Ed-uo2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="obx-9L-aXB"/>
-                    <constraint firstItem="8nB-7w-ch0" firstAttribute="leading" secondItem="EYF-Ed-uo2" secondAttribute="trailing" constant="8" id="uyJ-2T-24m"/>
+                    <constraint firstItem="pWw-OO-1mb" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="oMl-CE-y5i"/>
+                    <constraint firstItem="bKe-y6-44E" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="qhk-lu-t4g"/>
                 </constraints>
                 <variation key="default">
                     <mask key="subviews">
@@ -74,10 +70,7 @@
                 <outlet property="heightConstraint" destination="H0i-6B-5iJ" id="BIR-uA-Huz"/>
                 <outlet property="tagViewOutlet" destination="pWw-OO-1mb" id="pio-1T-Ons"/>
             </connections>
-            <point key="canvasLocation" x="63.5" y="-137.5"/>
+            <point key="canvasLocation" x="-79" y="-231"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="tag" width="20" height="20"/>
-    </resources>
 </document>
